test/features/errors/semantic/e1029_conflicting_trait_bounds.spl
# E1029: Conflicting Trait Bounds

Feature: E1029 - Conflicting Trait Bounds
  As a Simple compiler
  I want to detect conflicting trait bounds on type parameters
  So that trait bounds are consistent

  Background:
    Given I have the Simple compiler

  Scenario: Mutually exclusive trait bounds
    When I compile:
      '''
      trait A:
        fn method_a()

      trait B:
        fn method_b()

      # Assuming A and B are mutually exclusive
      fn test<T: A + !B>(x: T):  # Error if conflicting
        x.method_a()
      '''
    Then I should see error E1029 if traits conflict
    And the error message should be "conflicting trait bounds for type parameter `{name}`"
    And the label should indicate "conflicting bounds"
    And the help should suggest "remove conflicting trait bounds"

  Scenario: Same trait bound specified twice
    When I compile:
      '''
      trait Display:
        fn show() -> str

      fn test<T: Display + Display>(x: T):  # Redundant but not conflicting
        print(x.show())
      '''
    Then compilation should succeed with possible warning

  Scenario: Valid multiple trait bounds
    When I compile:
      '''
      trait Display:
        fn show() -> str

      trait Clone:
        fn clone() -> Self

      fn process<T: Display + Clone>(x: T):
        val copy = x.clone()
        print(x.show())
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test<T: ConflictA + ConflictB>(x: T):
        # implementation
      '''
    Then I should see error E1029 if traits conflict
    And the error message should contain "충돌하는 트레이트 바운드"
